--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+flexi_logger = "0.23"
+log = "0.4"
+colored = "2"
+ctrlc = "3.2.5"
+clap = "4.1.4"
+dirs = "4.0"
