--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 flexi_logger = "0.23"
 log = "0.4"
-colored = "2"
+owo-colors = "3"
 ctrlc = "3.2.5"
 clap = "4.1.4"
 dirs = "4.0"
